    - Closes #4824.
0.96.7.11:
  - Fix HangingEntity placement all using Painting material for permission tests.
  - API: Add a TownKickEvent, courtesy of Warriorrrr with PR #4831.
  - Fix Spawn Point particles not disappearing when spawn points are moved.
    - Closes #4830.
  - Fix formatted balance for not enough money error, courtesy of Warriorrrr with PR #4833.
  - Fix not using the filteredname earlier on when a town is made. 
  - API: Add NationKingChangeEvent and TownMayorChangeEvent, courtesy of Warriorrrr with PR #4834.
  - Small refactor of the bank balance caching. 
  - Placeholder: %townyadvanced_player_location_plot_name%
    - Displays a plot's name if it has one.
  - Add townyadmin command for adding/removing nation allies or enemies, courtesy of Warriorrrr with PR #4826
  - New Commands:
    - /ta nation NATIONNAME ally [add|remove] NATIONNAME
    - /ta nation NATIONNAME enemy [add|remove] NATIONNAME
  - New Permission nodes:
    - towny.command.townyadmin.nation.enemy
    - towny.command.townyadmin.nation.ally
    - both are child nodes of towny.command.townyadmin.nation and therefore you will not need to add these (in most situations.)
0.96.7.12:
  - Swedish translation, added courtesy of OskyEdz with PR #4840.
  - Lower CreatureSpawnEvent priority to make Towny play nice with EliteMobs and not be the worst.
  - Fix unclaimedZoneIgnoreIds not working properly.
    - Closes #4844.
  - Fix personally-owned plots not taking on a fully-open perm line when a town is ruined.
    - Closes #4846.
  - Fix missing confirmation for admins using /t delete NAME and /n delete NAME.
  - Misc fixes courtesy of Warriorrrr with PR #4854.
  - More Swedish translating courtesy of OskyEdz with PR #4853.
  - es-419.yml updated couresty of EuGNosii with PR #4848.
  - Fix plot notifications not showing information when you've left a plotgroup into a non-plotgroup townblock.
    - Closes #4856.
  - API: Added ResidentPreJailEvent, a Cancellable event.
    - Closes #4862.