@@ -2,6 +2,9 @@ package com.palmergames.bukkit.towny.object.economy;
 
 import java.util.ArrayList;
 import java.util.List;
+
+import org.bukkit.ChatColor;
+
 import com.palmergames.bukkit.towny.TownyEconomyHandler;
 import com.palmergames.bukkit.towny.exceptions.EconomyException;
 import com.palmergames.bukkit.towny.object.TransactionType;
@@ -32,10 +35,10 @@ public class GovernmentAccountAuditor implements AccountAuditor {
 		
 		for (BankTransaction transaction : transactions) {
 			line = transaction.getTime() + "\n\n";
-			line += transaction.getType().getName() + " of " + TownyEconomyHandler.getFormattedBalance(transaction.getAmount());
+			line += transaction.getType().getName() + " of " + ChatColor.stripColor(TownyEconomyHandler.getFormattedBalance(transaction.getAmount()));
 			line += (transaction.getType() == TransactionType.DEPOSIT ? " to " : " from ") + transaction.getAccount().getName() + "\n\n";
 			line += "Reason: " + transaction.getReason() + "\n\n";
-			line += "Balance: " + TownyEconomyHandler.getFormattedBalance(transaction.getBalance());
+			line += "Balance: " + ChatColor.stripColor(TownyEconomyHandler.getFormattedBalance(transaction.getBalance()));
 			history.add(line);
 		}
 		
